Complement on the doc

--- a/doc/book.bib
+++ b/doc/book.bib
@@ -8,3 +8,73 @@
   year={2010},
   publisher={Oxford University Press}
 }
+
+@ARTICLE{Boyer2016-gq,
+  title     = "{obitools: a unix-inspired software package for DNA metabarcoding}",
+  author    = "Boyer, Fr{\'e}d{\'e}ric and Mercier, C{\'e}line and Bonin,
+               Aur{\'e}lie and Le Bras, Yvan and Taberlet, Pierre and Coissac,
+               Eric",
+  abstract  = "DNA metabarcoding offers new perspectives in biodiversity
+               research. This recently developed approach to ecosystem study
+               relies heavily on the use of next-generation sequencing (NGS)
+               and thus calls upon the ability to deal with huge sequence data
+               sets. The obitools package satisfies this requirement thanks to
+               a set of programs specifically designed for analysing NGS data
+               in a DNA metabarcoding context. Their capacity to filter and
+               edit sequences while taking into account taxonomic annotation
+               helps to set up tailor-made analysis pipelines for a broad range
+               of DNA metabarcoding applications, including biodiversity
+               surveys or diet analyses. The obitools package is distributed as
+               an open source software available on the following website:
+               http://metabarcoding.org/obitools. A Galaxy wrapper is available
+               on the GenOuest core facility toolshed:
+               http://toolshed.genouest.org.",
+  journal   = "Molecular ecology resources",
+  publisher = "Wiley Online Library",
+  volume    =  16,
+  number    =  1,
+  pages     = "176--182",
+  month     =  jan,
+  year      =  2016,
+  url       = "http://dx.doi.org/10.1111/1755-0998.12428",
+  keywords  = "PCR errors; biodiversity; next-generation sequencing; sequence
+               analysis; taxonomic annotation",
+  language  = "en",
+  issn      = "1755-098X, 1755-0998",
+  pmid      = "25959493",
+  doi       = "10.1111/1755-0998.12428"
+}
+
+
+@article{Lipman1985-hw,
+	abstract = {An algorithm was developed which facilitates the search for
+              similarities between newly determined amino acid sequences and
+              sequences already available in databases. Because of the
+              algorithm's efficiency on many microcomputers, sensitive protein
+              database searches may now become a routine procedure for
+              molecular biologists. The method efficiently identifies regions
+              of similar sequence and then scores the aligned identical and
+              differing residues in those regions by means of an amino acid
+              replacability matrix. This matrix increases sensitivity by giving
+              high scores to those amino acid replacements which occur
+              frequently in evolution. The algorithm has been implemented in a
+              computer program designed to search protein databases very
+              rapidly. For example, comparison of a 200-amino-acid sequence to
+              the 500,000 residues in the National Biomedical Research
+              Foundation library would take less than 2 minutes on a
+              minicomputer, and less than 10 minutes on a microcomputer (IBM
+              PC).},
+	author = {Lipman, D J and Pearson, W R},
+	date-added = {2023-01-26 15:17:10 +0100},
+	date-modified = {2023-01-26 15:17:10 +0100},
+	issn = {0036-8075},
+	journal = {Science},
+	month = mar,
+	number = 4693,
+	pages = {1435--1441},
+	pmid = {2983426},
+	title = {{Rapid and sensitive protein similarity searches}},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/2983426},
+	volume = 227,
+	year = 1985,
+	bdsk-url-1 = {http://www.ncbi.nlm.nih.gov/pubmed/2983426}}
