Latest version of the doc in HTML

--- a/doc/book.bib
+++ b/doc/book.bib
@@ -78,3 +78,103 @@
 	volume = 227,
 	year = 1985,
 	bdsk-url-1 = {http://www.ncbi.nlm.nih.gov/pubmed/2983426}}
+
+
+@ARTICLE{Shehzad2012-pn,
+  title     = "{Carnivore diet analysis based on next-generation sequencing:
+               Application to the leopard cat (Prionailurus bengalensis) in
+               Pakistan}",
+  author    = "Shehzad, Wasim and Riaz, Tiayyba and Nawaz, Muhammad A and
+               Miquel, Christian and Poillot, Carole and Shah, Safdar A and
+               Pompanon, Francois and Coissac, Eric and Taberlet, Pierre",
+  journal   = "Molecular ecology",
+  publisher = "Wiley Online Library",
+  volume    =  21,
+  number    =  8,
+  pages     = "1951--1965",
+  year      =  2012,
+  url       = "https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-294X.2011.05424.x",
+  issn      = "0962-1083"
+}
+
+
+@ARTICLE{Riaz2011-gn,
+  title    = "{ecoPrimers: inference of new DNA barcode markers from whole
+              genome sequence analysis}",
+  author   = "Riaz, Tiayyba and Shehzad, Wasim and Viari, Alain and Pompanon,
+              Fran{\c c}ois and Taberlet, Pierre and Coissac, Eric",
+  abstract = "Using non-conventional markers, DNA metabarcoding allows
+              biodiversity assessment from complex substrates. In this article,
+              we present ecoPrimers, a software for identifying new barcode
+              markers and their associated PCR primers. ecoPrimers scans whole
+              genomes to find such markers without a priori knowledge.
+              ecoPrimers optimizes two quality indices measuring taxonomical
+              range and discrimination to select the most efficient markers
+              from a set of reference sequences, according to specific
+              experimental constraints such as marker length or specifically
+              targeted taxa. The key step of the algorithm is the
+              identification of conserved regions among reference sequences for
+              anchoring primers. We propose an efficient algorithm based on
+              data mining, that allows the analysis of huge sets of sequences.
+              We evaluate the efficiency of ecoPrimers by running it on three
+              different sequence sets: mitochondrial, chloroplast and bacterial
+              genomes. Identified barcode markers correspond either to barcode
+              regions already in use for plants or animals, or to new potential
+              barcodes. Results from empirical experiments carried out on a
+              promising new barcode for analyzing vertebrate diversity fully
+              agree with expectations based on bioinformatics analysis. These
+              tests demonstrate the efficiency of ecoPrimers for inferring new
+              barcodes fitting with diverse experimental contexts. ecoPrimers
+              is available as an open source project at:
+              http://www.grenoble.prabi.fr/trac/ecoPrimers.",
+  journal  = "Nucleic acids research",
+  volume   =  39,
+  number   =  21,
+  pages    = "e145",
+  month    =  nov,
+  year     =  2011,
+  url      = "http://dx.doi.org/10.1093/nar/gkr732",
+  language = "en",
+  issn     = "0305-1048, 1362-4962",
+  pmid     = "21930509",
+  doi      = "10.1093/nar/gkr732",
+  pmc      = "PMC3241669"
+}
+
+
+@ARTICLE{Seguritan2001-tg,
+  title    = "{FastGroup: a program to dereplicate libraries of 16S rDNA
+              sequences}",
+  author   = "Seguritan, V and Rohwer, F",
+  abstract = "BACKGROUND: Ribosomal 16S DNA sequences are an essential tool for
+              identifying and classifying microbes. High-throughput DNA
+              sequencing now makes it economically possible to produce very
+              large datasets of 16S rDNA sequences in short time periods,
+              necessitating new computer tools for analyses. Here we describe
+              FastGroup, a Java program designed to dereplicate libraries of
+              16S rDNA sequences. By dereplication we mean to: 1) compare all
+              the sequences in a data set to each other, 2) group similar
+              sequences together, and 3) output a representative sequence from
+              each group. In this way, duplicate sequences are removed from a
+              library. RESULTS: FastGroup was tested using a library of
+              single-pass, bacterial 16S rDNA sequences cloned from
+              coral-associated bacteria. We found that the optimal strategy for
+              dereplicating these sequences was to: 1) trim ambiguous bases
+              from the 5' end of the sequences and all sequence 3' of the
+              conserved Bact517 site, 2) match the sequences from the 3' end,
+              and 3) group sequences > or =97\% identical to each other.
+              CONCLUSIONS: The FastGroup program simplifies the dereplication
+              of 16S rDNA sequence libraries and prepares the raw sequences for
+              subsequent analyses.",
+  journal  = "BMC bioinformatics",
+  volume   =  2,
+  pages    = "9",
+  month    =  oct,
+  year     =  2001,
+  url      = "http://dx.doi.org/10.1186/1471-2105-2-9",
+  language = "en",
+  issn     = "1471-2105",
+  pmid     = "11707150",
+  doi      = "10.1186/1471-2105-2-9",
+  pmc      = "PMC59723"
+}
